[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-cost-observability"
version = "0.1.0"
description = "Enterprise Network Cost Observability Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
network-cost-observe = "network_cost_observability.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
